--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,51 +9,8 @@
   </head>
   <body>
     <div class="grid-container">
-      <header class="header">
-        <div class="container">
-          <nav>
-            <div class="Rlogo"><h4>At Home</h4></div>
-            <ul class="nav-links">
-              <li><a href="#home">Home</a></li>
-              <li><a href="#about">About Us</a></li>
-              <li><a href="#menu">Menu</a></li>
-              <li><a href="#resturant">Resturant</a></li>
-              <li><a href="/#/signin">Sign-In</a></li>
-              <li><a href="/#/cart">Cart</a></li>
-            </ul>
-            <div class="burger">
-              <div class="line1"></div>
-              <div class="line2"></div>
-              <div class="line3"></div>
-            </div>
-          </nav>
-        </div>
-      </header>
-      <main id="main-container">
-        <section class="about-section" id="resturant">
-          <div class="container">
-            <div class="row">
-              <div class="section-title">
-                <h2>Come See Us!</h2>
-              </div>
-            </div>
-            <div class="row">
-              <div class="about-text">
-                <h3>Get In Touch</h3>
-                <p>
-                  Address: Leicester <br />
-                  Phone: +44 123 456 789 Email:
-                  <br />AtHome@yourresturant.com
-                </p>
-                <a href="#menu" class="btn btn-default">Check Out Menu</a>
-              </div>
-              <div class="ah-img">
-                <img src="./images/AtHome.jpg" alt="athome-img" />
-              </div>
-            </div>
-          </div>
-        </section>
-      </main>
+      <header class="header" id="header-container"></header>
+      <main id="main-container"></main>
       <!--footer starts here -->
       <footer class="footer">
         <div class="container">
