--- a/frontend/index.html
+++ b/frontend/index.html
@@ -35,12 +35,6 @@
               <h3>contact us</h3>
               <p>+44 0712 345 678</p>
               <p>Athome@yourresturant.com</p>
-              <div class="social-links">
-                <a href="#"><i class="fab fa-facebook-f"></i></a>
-                <a href="#"><i class="fab fa-instagram"></i></a>
-                <a href="#"><i class="fab fa-twitter"></i></a>
-                <a href="#"><i class="fab fa-youtube"></i></a>
-              </div>
             </div>
           </div>
           <div class="row">
@@ -53,5 +47,6 @@
       <!--footer ends here -->
     </div>
     <script src="main.js"></script>
+    <script src="scripts.js"></script>
   </body>
 </html>
