--- a/frontend/index.html
+++ b/frontend/index.html
@@ -46,7 +46,7 @@
       </footer>
       <!--footer ends here -->
     </div>
+    <script src="./scripts.js"></script>
     <script src="main.js"></script>
-    <script src="scripts.js"></script>
   </body>
 </html>
