--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,42 +10,41 @@
   <body>
     <div class="overlay" id="loading-overlay">Loading...</div>
     <div class="overlay" id="message-overlay"></div>
-    <div class="grid-container">
-      <header class="header" id="header-container"></header>
-      <main id="main-container"></main>
-      <!--footer starts here -->
-      <footer class="footer">
-        <div class="container">
-          <div class="row">
-            <div class="footer-item">
-              <h3>Our location</h3>
-              <p>
-                LE1, Leicester <br />
-                St Martin Square
-              </p>
-            </div>
-            <div class="footer-item">
-              <h3>Opening hours</h3>
-              <p>
-                Monday to Sunday <br />
-                9:00 AM - 10:00 PM
-              </p>
-            </div>
-            <div class="footer-item">
-              <h3>contact us</h3>
-              <p>+44 0712 345 678</p>
-              <p>Athome@yourresturant.com</p>
-            </div>
+
+    <!--Header starts here-->
+    <header class="header" id="header-container"></header>
+    <!--Header ends here-->
+    <main id="main-container"></main>
+    <!--footer starts here -->
+    <footer class="footer">
+      <div class="container">
+        <div class="row">
+          <div class="footer-item">
+            <h3>Our location</h3>
+            <p>
+              LE1, Leicester <br />
+              St Martin Square
+            </p>
           </div>
-          <div class="row">
-            <div class="copyright">
-              &copy; 2022 - Designed by Sarah Badibanga
-            </div>
+          <div class="footer-item">
+            <h3>Opening hours</h3>
+            <p>
+              Monday to Sunday <br />
+              9:00 AM - 10:00 PM
+            </p>
+          </div>
+          <div class="footer-item">
+            <h3>contact us</h3>
+            <p>+44 0712 345 678</p>
+            <p>Athome@yourresturant.com</p>
           </div>
         </div>
-      </footer>
-      <!--footer ends here -->
-    </div>
+        <div class="row">
+          <div class="copyright">&copy; 2022 - Designed by Sarah Badibanga</div>
+        </div>
+      </div>
+    </footer>
+    <!--footer ends here -->
     <script src="./scripts.js"></script>
     <script src="main.js"></script>
   </body>
